--- a/class 05/index.html
+++ b/class 05/index.html
@@ -38,6 +38,9 @@
         </li>
         <li>After the dough has doubled in size, roll it out into a large rectangle.</li>
         <li>Melt the butter for the filling and mix in the sugar cinnamon.</li>
+        <li>Spread the filling onto the dough then roll the dough into a swiss roll.</li>
+        <li>Cut the roll into 3cm sections and place flat into a baking tray.</li>
+        <li>Preheat the oven to 350F or 180C, then bake the rolls for 20-50min until lightly brown.</li>
     </ol>
 </body>
 </html>
